--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -22,10 +22,6 @@ prepare_vars:
       echo "WIN_AMD64_BINARY=${CI_PROJECT_NAME}-windows-amd64-$(grep -oP 'VERSION=\Kv.+' vars.env).exe" | tee -a vars.env
     - |
       echo "PACKAGE_REGISTRY_URL=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/${CI_PROJECT_NAME}/$(grep -oP 'VERSION=\Kv.+' vars.env)" | tee -a vars.env
-    - |
-      ([[ "${CI_COMMIT_TAG}" != "" ]] && \
-        [[ $(git rev-parse -n 1 "${CI_COMMIT_TAG}") == $(git rev-parse -n 1 "${CI_DEFAULT_BRANCH}") ]]) && \
-        echo "MAKE_RELEASE=true" | tee -a vars.env || true 
 
   artifacts:
     reports:
@@ -63,7 +59,8 @@ upload:
       artifacts: true
   image: curlimages/curl:latest
   rules:
-    - if: $MAKE_RELEASE == "true"
+    - if: $CI_COMMIT_TAG
+      when: manual
   script:
     - |
       curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file bin/${DARWIN_AMD64_BINARY} ${PACKAGE_REGISTRY_URL}/${DARWIN_AMD64_BINARY}
@@ -84,7 +81,8 @@ release:
     - job: upload
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
-    - if: $MAKE_RELEASE == "true"
+    - if: $CI_COMMIT_TAG
+      when: manual
   script:
     - |
       release-cli create --name "$CI_COMMIT_TAG" --tag-name $CI_COMMIT_TAG \
